# r2c2

./: Cargo.toml
rustc_codegen_c/: Cargo.toml  build.rs
rustc_codegen_c/src/: ice.rs  lib.rs  metadata.rs  providers.rs  utils.rs
rustc_codegen_c/src/builder/: function.rs  mod.rs  test.rs  types.rs
rustc_codegen_c/src/builder/snapshots/: test__declare_locals.snap  test__def_fn.snap  test__define_struct.snap  test__define_struct_fn_ptr.snap  test__fwd_declare.snap  test__fwd_declare_fn.snap  tests__def_fn.snap  tests__define_struct.snap  tests__define_struct_fn_ptr.snap  tests__fwd_declare.snap  tests__fwd_declare_fn.snap
rustc_codegen_c/src/codegen/: allocator.rs  mod.rs
src/: main.rs
