[package]
name = "r2c2"
version = "0.0.0"
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
description = "Nightly rustc wrapper using the C codegen backend"

[dependencies]
log = "0.4.6"

# depend on the codegen backend to ensure Cargo built the dylib
rustc_codegen_c = { path = "rustc_codegen_c" }

[workspace]

[profile.dev]
# Turn off line info to improve incr. comp. reuse.
debug = false
