[package]
authors = ["Jonas Schievink <jonasschievink@gmail.com>"]
name = "rustc_codegen_c"
version = "0.0.0"
build = "build.rs"

[lib]
crate-type = ["dylib"]

[dependencies]
ar = "0.7.0"
object = "0.12.0"
bitflags = "1.0.5"
cc = "1.0.36"
flate2 = "1.0.7"
jobserver = "0.1.13"
libc = "0.2.54"
log = "0.4.6"
num_cpus = "1.10.0"
tempfile = "3.0.7"
hashbrown = "0.3.0"
toolshed = "0.8.0"

[dev-dependencies]
insta = "0.7.4"

[target.'cfg(NOT_A_PLATFORM)'.dependencies]
rustc = { path = "../../rust/src/librustc" }
rustc_mir = { path = "../../rust/src/librustc_mir" }
rustc_allocator = { path = "../../rust/src/librustc_allocator" }
rustc_apfloat = { path = "../../rust/src/librustc_apfloat" }
rustc_target = { path = "../../rust/src/librustc_target" }
rustc_data_structures = { path = "../../rust/src/librustc_data_structures" }
rustc_incremental = { path = "../../rust/src/librustc_incremental" }
rustc_codegen_utils = { path = "../../rust/src/librustc_codegen_utils" }
rustc_codegen_ssa = { path = "../../rust/src/librustc_codegen_ssa" }
syntax = { path = "../../rust/src/libsyntax" }
syntax_pos = { path = "../../rust/src/libsyntax_pos" }
rustc_errors = { path = "../../rust/src/librustc_errors" }
serialize = { path = "../../rust/src/libserialize" }
